Adiciona mais competências

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     </p>
     <br>
     <ul id="competencias">
-        <li>Python Básico</li>
-        <li>JavaScript Básico</li>
+        <li>Python</li>
+        <li>JavaScript</li>
+        <li>HTML</li>
+        <li>CSS</li>
         <li><strong>Unix Intermediário</strong></li>
     </ul>
     <br>
