Corrigindo id e adicionando título em Competências

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         web na <strong>Trybe</strong>.
     </p>
     <br>
+    <h2>Competências</h2>
     <ul id="competencias">
         <li>Python</li>
         <li>JavaScript</li>
