Removendo informações desnecessárias

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li>JavaScript</li>
         <li>HTML</li>
         <li>CSS</li>
-        <li><strong>Unix Intermediário</strong></li>
+        <li><strong>Unix</strong></li>
     </ul>
     <a href="https://diolinux.com.br/" target="_blank">Meu blog favorito</a>
     <h3>Index:</h3>
