Adicionando alguns atributos css na página

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Portfólio</title>
 </head>
 <body>
-    <h1>Walefy Domingues Gonçalves</h1>
-    <br>
-    <img src="./assets/imgs/profile.png" alt="Foto de Walefy Domingues Gonçalves" width="300px" id="foto">
-    <br>
-    <a href="./assets/imgs/profile.png" target="_blank">Link da imagem</a>
+
+    <div id="profile-container">
+        <h1 id="nome">Walefy Domingues Gonçalves</h1>
+        <card id="profile-card">
+            <img src="./assets/imgs/profile.png" alt="Foto de Walefy Domingues Gonçalves" width="300px" id="profile-photo">
+            <a href="./assets/imgs/profile.png" target="_blank" id="link-img-profile">Link da imagem</a>
+        </card>
+    </div>
     <h2>Descrição</h2>
     <p id="descricao">
         Meu nome é <strong>Walefy Domingues Gonçalves</strong>,
@@ -30,7 +34,7 @@
     <a href="https://diolinux.com.br/" target="_blank">Meu blog favorito</a>
     <h3>Index:</h3>
     <ul>
-        <li><a href="#foto">Foto</a></li>
+        <li><a href="#profile-photo">Foto</a></li>
         <li><a href="#descricao">Descrição</a></li>
         <li><a href="#competencias">Competências</a></li>
     </ul>
