Mudando alguns estilos

--- a/index.html
+++ b/index.html
@@ -8,22 +8,21 @@
     <title>Portfólio</title>
 </head>
 <body>
-
     <div id="profile-container">
         <h1 id="nome">Walefy Domingues Gonçalves</h1>
-        <card id="profile-card">
+        <div id="profile-card">
             <img src="./assets/imgs/profile.png" alt="Foto de Walefy Domingues Gonçalves" width="300px" id="profile-photo">
             <a href="./assets/imgs/profile.png" target="_blank" id="link-img-profile">Link da imagem</a>
-        </card>
+        </div>
     </div>
-    <h2>Descrição</h2>
-    <p id="descricao">
+    <h2 class="green-title">Descrição</h2>
+    <p id="description">
         Meu nome é <strong>Walefy Domingues Gonçalves</strong>,
          tenho 19 anos, sou brasileiro e moro em Guanhães/MG,
          estudo desenvolvimento
         web na <strong>Trybe</strong>.
     </p>
-    <h2>Competências</h2>
+    <h2 class="green-title">Competências</h2>
     <ul id="competencias">
         <li>Python</li>
         <li>JavaScript</li>
@@ -31,12 +30,12 @@
         <li>CSS</li>
         <li><strong>Unix</strong></li>
     </ul>
-    <a href="https://diolinux.com.br/" target="_blank">Meu blog favorito</a>
-    <h3>Index:</h3>
+    <a href="https://diolinux.com.br/" target="_blank" class="no-decoration-link">Meu blog favorito</a>
+    <h3 class="green-title">Index:</h3>
     <ul>
-        <li><a href="#profile-photo">Foto</a></li>
-        <li><a href="#descricao">Descrição</a></li>
-        <li><a href="#competencias">Competências</a></li>
+        <li><a class="no-decoration-link" href="#profile-photo">Foto</a></li>
+        <li><a class="no-decoration-link" href="#description">Descrição</a></li>
+        <li><a class="no-decoration-link" href="#competencias">Competências</a></li>
     </ul>
 </body>
 </html>
