modificando alguns estilos css

--- a/index.html
+++ b/index.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Portfólio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Portfólio</title>
 </head>
+
 <body>
-    <div id="profile-container">
-        <h1 id="nome">Walefy Domingues Gonçalves</h1>
-        <div id="profile-card">
-            <img src="./assets/imgs/profile.png" alt="Foto de Walefy Domingues Gonçalves" width="300px" id="profile-photo">
-            <a href="./assets/imgs/profile.png" target="_blank" id="link-img-profile">Link da imagem</a>
-        </div>
+  <div id="profile-container">
+    <h1 id="nome">Walefy Domingues Gonçalves</h1>
+    <div id="profile-card">
+      <img src="./assets/imgs/profile.png" alt="Foto de Walefy Domingues Gonçalves" id="profile-photo">
+      <a href="./assets/imgs/profile.png" target="_blank" id="link-img-profile">Link da imagem</a>
     </div>
-    <h2 class="green-title">Descrição</h2>
-    <p id="description">
-        Meu nome é <strong>Walefy Domingues Gonçalves</strong>,
-         tenho 19 anos, sou brasileiro e moro em Guanhães/MG,
-         estudo desenvolvimento
-        web na <strong>Trybe</strong>.
-    </p>
-    <h2 class="green-title">Competências</h2>
-    <ul id="competencias">
-        <li>Python</li>
-        <li>JavaScript</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li><strong>Unix</strong></li>
-    </ul>
-    <a href="https://diolinux.com.br/" target="_blank" class="no-decoration-link">Meu blog favorito</a>
-    <h3 class="green-title">Index:</h3>
-    <ul>
-        <li><a class="no-decoration-link" href="#profile-photo">Foto</a></li>
-        <li><a class="no-decoration-link" href="#description">Descrição</a></li>
-        <li><a class="no-decoration-link" href="#competencias">Competências</a></li>
-    </ul>
+  </div>
+  <h2 class="green-title">Descrição</h2>
+  <p id="description">
+    Meu nome é <strong>Walefy Domingues Gonçalves</strong>,
+    tenho 19 anos, sou brasileiro e moro em Guanhães/MG,
+    estudo desenvolvimento
+    web na <strong>Trybe</strong>.
+  </p>
+  <h2 class="green-title">Competências</h2>
+  <ul id="competencias">
+    <li>Python</li>
+    <li>JavaScript</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li><strong>Unix</strong></li>
+  </ul>
+  <h3 class="green-title">Index:</h3>
+  <ul>
+    <li><a class="no-decoration-link" href="#profile-photo">Foto</a></li>
+    <li><a class="no-decoration-link" href="#description">Descrição</a></li>
+    <li><a class="no-decoration-link" href="#competencias">Competências</a></li>
+  </ul>
+
+  <footer>
+    <a href="https://diolinux.com.br/" target="_blank" class="no-decoration-link" id="favorite-blog">Meu blog favorito</a>
+  </footer>
 </body>
+
 </html>
