--- a/index.html
+++ b/index.html
@@ -17,27 +17,33 @@
       <a href="./assets/imgs/profile.png" target="_blank" id="link-img-profile">Link da imagem</a>
     </div>
   </div>
-  <h2 class="green-title">Descrição</h2>
-  <p id="description">
-    Meu nome é <strong>Walefy Domingues Gonçalves</strong>,
-    tenho 19 anos, sou brasileiro e moro em Guanhães/MG,
-    estudo desenvolvimento
-    web na <strong>Trybe</strong>.
-  </p>
-  <h2 class="green-title">Competências</h2>
-  <ul id="competencias">
-    <li>Python</li>
-    <li>JavaScript</li>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li><strong>Unix</strong></li>
-  </ul>
-  <h3 class="green-title">Index:</h3>
-  <ul>
-    <li><a class="no-decoration-link" href="#profile-photo">Foto</a></li>
-    <li><a class="no-decoration-link" href="#description">Descrição</a></li>
-    <li><a class="no-decoration-link" href="#competencias">Competências</a></li>
-  </ul>
+  <div id="description-container">
+    <h2 class="green-title">Descrição</h2>
+    <p id="description">
+      Meu nome é <strong>Walefy Domingues Gonçalves</strong>,
+      tenho 19 anos, sou brasileiro e moro em Guanhães/MG,
+      estudo desenvolvimento
+      web na <strong>Trybe</strong>.
+    </p>
+  </div>
+  <div id="skills-container">
+    <h2 class="green-title">Competências</h2>
+    <ul id="competencias">
+      <li>Python</li>
+      <li>JavaScript</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li><strong>Unix</strong></li>
+    </ul>
+  </div>
+  <div id="index-container">
+    <h3 class="green-title">Index:</h3>
+    <ul>
+      <li><a class="no-decoration-link" href="#profile-photo">Foto</a></li>
+      <li><a class="no-decoration-link" href="#description">Descrição</a></li>
+      <li><a class="no-decoration-link" href="#competencias">Competências</a></li>
+    </ul>
+  </div>
 
   <footer>
     <a href="https://diolinux.com.br/" target="_blank" class="no-decoration-link" id="favorite-blog">Meu blog favorito</a>
