adicionando tags de html semântico

--- a/index.html
+++ b/index.html
@@ -10,43 +10,58 @@
 </head>
 
 <body>
-  <div id="profile-container">
+  <header id="profile-container">
     <h1 id="nome">Walefy Domingues Gonçalves</h1>
     <div id="profile-card">
       <img src="./assets/imgs/profile.png" alt="Foto de Walefy Domingues Gonçalves" id="profile-photo">
       <a href="./assets/imgs/profile.png" target="_blank" id="link-img-profile">Link da imagem</a>
     </div>
-  </div>
-  <div id="description-container">
-    <h2 class="green-title">Descrição</h2>
-    <p id="description">
-      Meu nome é <strong>Walefy Domingues Gonçalves</strong>,
-      tenho 19 anos, sou brasileiro e moro em Guanhães/MG,
-      estudo desenvolvimento
-      web na <strong>Trybe</strong>.
-    </p>
-  </div>
-  <div id="skills-container">
-    <h2 class="green-title">Competências</h2>
-    <ul id="competencias">
-      <li>Python</li>
-      <li>JavaScript</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li><strong>Unix</strong></li>
-    </ul>
-  </div>
-  <div id="index-container">
-    <h3 class="green-title">Index:</h3>
-    <ul>
-      <li><a class="no-decoration-link" href="#profile-photo">Foto</a></li>
-      <li><a class="no-decoration-link" href="#description">Descrição</a></li>
-      <li><a class="no-decoration-link" href="#competencias">Competências</a></li>
-    </ul>
-  </div>
-
+  </header>
+  <main>
+    <div id="description-container">
+      <h2 class="green-title">Descrição</h2>
+      <p id="description">
+        Meu nome é <strong>Walefy Domingues Gonçalves</strong>,
+        tenho 19 anos, sou brasileiro e moro em Guanhães/MG,
+        estudo desenvolvimento
+        web na <strong>Trybe</strong>.
+      </p>
+    </div>
+    <div id="skills-container">
+      <h2 class="green-title">Competências</h2>
+      <ul id="competencias">
+        <li>Python</li>
+        <li>JavaScript</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li><strong>Unix</strong></li>
+      </ul>
+    </div>
+    <div id="index-container">
+      <nav>
+        <h3 class="green-title">Index:</h3>
+        <ul class="link-list">
+          <li><a href="#profile-photo">Foto</a></li>
+          <li><a href="#description">Descrição</a></li>
+          <li><a href="#competencias">Competências</a></li>
+        </ul>
+      </nav>
+    </div>  
+  </main>
   <footer>
-    <a href="https://diolinux.com.br/" target="_blank" class="no-decoration-link" id="favorite-blog">Meu blog favorito</a>
+    <section>
+      <p>Página criada por Walefy D. Gonçalves</p>
+    </section>
+    <nav id="nav-footer">
+      <ul class="link-list" id="links-footer">
+        <li>
+          <a href="https://www.linkedin.com/in/walefy/" target="_blank">linkedIn</a>
+        </li>
+        <li>
+          <a href="https://github.com/walefy" target="_blank">GitHub</a>
+        </li>
+      </ul>  
+    </nav>
   </footer>
 </body>
 
